@@ -193,7 +193,12 @@ def BGPlayvid(url, name, download=None):
                 newname = name + video
                 listitem = xbmcgui.ListItem(newname)
                 listitem.setArt({'thumb': iconimage, 'icon': "DefaultVideo.png", 'poster': iconimage})
-                listitem.setInfo('video', {'Title': newname, 'Genre': 'Porn'})
+                if utils.KODIVER > 19.8:
+                    vtag = listitem.getVideoInfoTag()
+                    vtag.setTitle(newname)
+                    vtag.setGenres(['Porn'])
+                else:
+                    listitem.setInfo('video', {'Title': newname, 'Genre': 'Porn'})
                 listitem.setProperty("IsPlayable", "true")
                 videourl = 'https://video.beeg.com/' + key + '|Referer={}'.format(site.url)
                 pl.add(videourl, listitem)
