@@ -1,3 +1,5 @@
 ﻿[B]Version 1.1.68[/B]
+Base code changes to support Kodi 20+
 heroero - sort categories when listing
 porndish - new start (basic at the moment)
+erome - fix listing
